--- a/style.css
+++ b/style.css
@@ -1,14 +1,89 @@
 /* nejsme vcerejsi, pouzivame moderni box model */
-html { box-sizing: border-box; }
-*, :after, :before { box-sizing: inherit; }
+html {
+  box-sizing: border-box;
+}
+*,
+:after,
+:before {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
 
 body {
-	font-family: sans-serif;
-	font-size: 14px;
+  font-family: sans-serif;
+  font-size: 14px;
+  text-align: center;
 }
 
 /* ---------------------------------------------------- */
+.heading {
+  margin: 5%;
+}
 
+.kontakt {
+  border: 1px solid gray;
+  border-bottom: 1px solid lightseagreen;
+  border-radius: 7px;
+  margin: 4% 5%;
+  padding: 4% 8%;
+}
+
+.kontakt img {
+  border-radius: 50%;
+  margin: 2%;
+}
+
+.kontakt h2 {
+  margin-bottom: 2%;
+}
+
+@media screen and (min-width: 540px) {
+  .kontejner {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .kontakt {
+    flex: 0 0 48%;
+    margin: 1% 1%;
+    padding: 2%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .kontakt__img {
+    margin-right: 15px;
+  }
+
+  .kontakt__img img {
+    width: 100%;
+  }
+  .kontakt__text {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .kontejner {
+    flex-wrap: nowrap;
+  }
+
+  .kontakt {
+    flex: 0 1 calc(100% / 4);
+    padding: 1%;
+
+    flex-direction: column;
+  }
+
+  .kontakt__text {
+    text-align: center;
+  }
+
+  .kontakt__text h2 {
+    margin: 4% 0;
+  }
+}
 /*
 Breakpointy
 Mobil   0 - 539px
